tooling/nargo_cli/tests/snapshots/execute__tests__modules_more_force_brillig_true_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "",
  "hash": "9363191425984429290",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "field"
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUQQ6CMBBspUQr0YNGL/qIIigcOehDGgnv4OmmYRuWtXiQ7SSkJdvOzA6lUgyQ8DgoGFfiG35NA6NZhpyRy8T0KSP5nIQsxTx87QqjJvtdPWFsWBNdTv7alA8d6I/Rf6ERZwT+m+dXcfjNGnie/ZRfEN2dmP68eI+v4TP2gtoG6n6+h7kmfDG+O/bEndsx4N9rZdDrGeWBc01/7A3lIhh9S6KnAv6wfkrWn4jPWOfyQPrHWpkY7yXV8+tX9ZCTQ9KPOfh8MBSq4/UXeN/O9NH86bOrbN4VtrN327bl29KcHPA5/ACOyeBWeQcAAA==",
  "debug_symbols": "lZDLCsMgEEX/ZdYuopAm9VdKCSYZgyAqPgpF/Pdq6UK6czNwhzl34GQ4cU/Xpoy0Afgjg7aHiMqamnIhsHultbq2fg1TG3T+3gcnTIshCh+BrzMBNCdwSmnFpdIIfGblSYDeRoFlFFhHgfsgwKYhoNT0El6JXeNPqEzm6PzGt8M/1c7bA8/ksUnvfLfXjBG21Npa/QE=",
  "file_map": {
    "52": {
      "source": "mod foo;\n// An example of the module system\nfn main(x: Field, y: Field) {\n    assert(x != foo::bar::from_bar(y));\n}\n",
      "path": "/Users/asterite/Projects/noir/test_programs/execution_success/modules_more/src/main.nr"
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
